@@ -1,7 +1,16 @@
+2013-05-29 Riccardo Mottola <rm@gnu.org>
+
+	* Authenticator.h
+	* Authenticator.m
+	* LoginPanelController.h
+	* LoginPanelController.m
+	Move session start to the controller. Give the authenticator a password entity accessor.
+
 2013-05-25: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
 	* loginpaneld.m
 	  call waitpid() correctly
 	  call loginpanel with -GSX11HandlesWindowDecorations NO
+
 2013-05-22: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
 	* XServerManager.[h|m]
 	  added singleton class, responsible to spawn/kill the X server
